# ny-open-futures-terminal

./: .gitignore  README.md  app.py  requirements.txt
.streamlit/: config.toml
config/: defaults.yaml
engine/: .env.example  Cargo.toml
engine/src/: alert.rs  api.rs  backtest.rs  config.rs  data.rs  main.rs  session.rs  setup.rs
src/: __init__.py  config.py  constants.py  models.py
src/analytics/: __init__.py  distributions.py  patterns.py  reporting.py  structure.py  time_of_day.py
src/backtest/: __init__.py  engine.py  execution.py  metrics.py  optimizer.py
src/charts/: __init__.py  common.py  exploratory.py  performance.py  price.py
src/data/: __init__.py  base.py  cache.py  databento.py  loaders.py  yahoo.py
src/sessions/: __init__.py  definitions.py  engine.py
src/strategies/: __init__.py  base.py  failed_breakout.py  opening_range_breakout.py  sweep_reversal.py
src/ui/: __init__.py  backtest_tab.py  diagnostics_tab.py  explorer_tab.py  overview.py  sidebar.py  structure_tab.py  time_tab.py  trade_log_tab.py
src/utils/: __init__.py  format.py  logging_utils.py  math_utils.py  time.py  validation.py
