[package]
name = "jarvis-engine"
version = "0.1.0"
edition = "2021"
description = "JARVIS Trading - Core research and signal engine"

[dependencies]
# Web
axum = { version = "0.7", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Data & analytics
polars = { version = "0.44", features = ["lazy", "temporal", "dtype-full"] }
duckdb = { version = "0.11", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"

# HTTP client for data fetchers
reqwest = { version = "0.12", features = ["json"] }

# Config / env
dotenvy = "0.15"

# Logging & errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
